# ycmd-1

./: .gitignore  .gitmodules  .travis.yml  .vimspector.json  .ycm_extra_conf.py  JAVA_SUPPORT.md  README.md  appveyor.yml  azure-pipelines.yml  benchmark.py  build.py  bundle.js.map  download_file.py  index.html  main.css.map  package.json  pytest.ini  run_tests.py
.circleci/: config.yml  install_dependencies.sh
api/: README.md  swagger.yaml
azure/: run_tests.sh
azure/linux/: install_dependencies.sh
azure/macos/: install_dependencies.sh
azure/windows/: install_dependencies.bat
ci/appveyor/: appveyor_install.bat
ci/travis/: travis_install.sh
cpp/ycm/: .syntastic_cppcheck_config  .ycm_extra_conf.py  CMakeLists.txt  Candidate.cpp  IdentifierCompleter.cpp  IdentifierDatabase.cpp  IdentifierDatabase.h  ycm_core.cpp
cpp/ycm/ClangCompleter/: ClangCompleter.cpp  ClangCompleter.h  ClangHelpers.cpp  ClangHelpers.h  CompletionData.cpp  CompletionData.h  Documentation.cpp  Documentation.h  FixIt.h  TranslationUnit.cpp  TranslationUnit.h  TranslationUnitStore.h
cpp/ycm/benchmarks/: PythonSupport_bench.cpp
cpp/ycm/profile/: CMakeLists.txt
cpp/ycm/profile/src/: main.cpp
cpp/ycm/profile/src/ClangCompleter/: Benchmark_Completions.cpp
cpp/ycm/profile/testdata/: Basic.cpp
docs/: bundle.js.map  index.html  main.css.map  openapi.yml
examples/: example_client.py
ycmd/: __main__.py  default_settings.json  default_ycm_extra_conf.py  extra_conf_store.py  extra_conf_support.py  handlers.py  identifier_utils.py  request_wrap.py  responses.py  server_state.py  server_utils.py  utils.py
ycmd/completers/: completer.py  completer_utils.py
ycmd/completers/cpp/: clang_completer.py  clangd_completer.py  flags.py  hook.py
ycmd/completers/cs/: cs_completer.py
ycmd/completers/general/: filename_completer.py
ycmd/completers/go/: go_completer.py
ycmd/completers/java/: hook.py  java_completer.py  javac_completer.py  lsapi.py  server_stderr
ycmd/completers/javascript/: tern_completer.py
ycmd/tests/: client_test.py  completer_test.py  completer_utils_test.py  conftest.py  diagnostics_test.py  get_completions_test.py  misc_handlers_test.py  request_wrap_test.py  signature_help_test.py  subcommands_test.py  test_utils.py  utils_test.py
(+81 files in other folders)
